--- a/styles/globals.css
+++ b/styles/globals.css
@@ -744,20 +744,16 @@ h2:before
 }
 
 
-.content
-p > strong:only-child:before
- {
-   content: "";
-   display: block;
-   margin-top: 3em; /* change this value to adjust the height of the line break */
-}
+
 
 
 .content a strong{
   color: #1D741B;
 }
 
-.content pre {
+.content li{
+  list-style: decimal;
+  margin-left: 2em;
 }
 
 .content pre code {
